<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/normal_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/notificationDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/notificationLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationDivider"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/location_state"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/notificationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationDivider"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/notification_status"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <TextView
        android:id="@+id/notificationHeadLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationLocation"
        android:textSize="@dimen/large_font_size"
        android:text="@string/notification_headline"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/notificationDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationHeadLine"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/report_details"
        android:textColor="@color/colorPrimaryDark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>