<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/colorNeutral"
    tools:context=".ui.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/layoutSignupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/vlarge_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signinLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_link"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSignupTitle" />

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/firstNameField"
            style="@style/CustomInputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/lastNameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signinLink"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/firstNameEdit"
                style="@style/CustomEditTextStyle"
                android:includeFontPadding="true"
                android:inputType="textCapWords"
                android:hint="@string/first_name_hint" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/lastNameField"
            style="@style/CustomInputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/emailFieldForSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameField"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/lastNameEdit"
                style="@style/CustomEditTextStyle"
                android:inputType="textCapWords"
                android:hint="@string/last_name_hint" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/emailFieldForSignUp"
            style="@style/CustomInputLayoutStyle"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameField"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/emailEdit"
                style="@style/CustomEditTextStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint_text" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/passwordFieldForSignup"
            style="@style/CustomInputLayoutStyle"
            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldForSignUp"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/passwordEdit"
                style="@style/CustomEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/password_hint_text" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <TextView
            android:id="@+id/passwordStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordstandard"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/passwordFieldForSignup"
            app:layout_constraintEnd_toEndOf="@id/passwordFieldForSignup"
            app:layout_constraintTop_toBottomOf="@id/passwordFieldForSignup"
            app:layout_constraintHorizontal_bias="0"
            android:visibility="gone"
            tools:visibility="visible" />
        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/cpasswordField"
            style="@style/CustomInputLayoutStyle"
            android:layout_marginTop="10dp"

            app:layout_constraintBottom_toTopOf="@+id/phoneNumberField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordStandard"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/cpasswordEdit"
                style="@style/CustomEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/cpassword_hint_text" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:id="@+id/phoneNumberField"
            style="@style/CustomInputLayoutStyle"
            android:layout_marginTop="10dp"

            app:layout_constraintBottom_toTopOf="@+id/cpasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpasswordField"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/phoneNumberEdit"
                style="@style/CustomEditTextStyle"
                android:inputType="phone"
                android:maxLength="15"
                android:hint="@string/phone_hint_text" />
        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <CheckBox
            android:id="@+id/checkboxForSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="normal"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberField"

            />


        <include
            android:id="@+id/signupBottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/checkboxForSignup"
            app:layout_constraintBottom_toBottomOf="parent"
            layout="@layout/bottom_indicator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>