<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/colorNeutral"
    tools:context=".ui.SigninFragment">

    <!-- TODO: Update blank fragment layout -->
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >

       <TextView
           android:id="@+id/layout_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:textSize="@dimen/vlarge_font_size"
           android:textStyle="bold"
           android:textColor="@color/colorPrimaryDark"
           android:layout_marginTop="80dp"
           android:text="@string/signin_title" />
       <TextView
           android:id="@+id/signupLink"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/layout_title"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:textSize="@dimen/medium_font_size"
           android:textStyle="bold"
           android:textColor="@color/colorPrimaryDark"
           android:text="@string/signup_link" />
       <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
           android:id="@+id/emailField"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/signupLink"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:borderColor="@android:color/darker_gray"
           android:layout_marginTop="50dp"
           >
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:singleLine="true"
               android:hint="@string/email_hint_text" />
       </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

       <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
           android:id="@+id/passwordField"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/emailField"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:borderColor="@android:color/darker_gray"
           android:layout_marginTop="20dp"
           >
           <EditText
               android:id="@+id/passwordEditField"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:singleLine="true"
               android:hint="@string/password_hint_text" />
       </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
       <CheckBox
           android:id="@+id/checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/passwordField"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="10dp"
           android:checked="true"
           android:text="@string/remember_me"
           android:textStyle="normal"
           android:textSize="@dimen/medium_font_size"
           android:textColor="@color/colorPrimaryDark"

           />

       <TextView
           android:id="@+id/forgotPassword"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@id/checkbox"
           app:layout_constraintBottom_toBottomOf="@id/checkbox"
           app:layout_constraintTop_toBottomOf="@id/passwordField"
           app:layout_constraintStart_toEndOf="@id/checkbox"
           app:layout_constraintEnd_toEndOf="@id/passwordField"
           android:textSize="@dimen/medium_font_size"
           android:textStyle="normal"
           android:textColor="@color/colorPrimaryDark"
           android:labelFor="@id/checkbox"
           app:layout_constraintHorizontal_bias="1"
           android:clickable="true"
           android:focusable="true"
           android:text="@string/forgot_password" />
       


       <include
           android:id="@+id/signinIndicator"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
           layout="@layout/bottom_indicator"/>


   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>